# Geppetto

./: .eslintrc.json  .gitattributes  .gitignore  LICENSE  README.md
Dockerfiles/: Dockerfile_client  Dockerfile_gazebo  Dockerfile_server  compose.yaml
application/: .eslintrc.json  package.json  tsconfig.json  workspace.code-workspace
application/client/: .eslintrc.json  angular.json  package-lock.json  package.json  set_backend_ip.py
application/client/src/: index.html  main.ts  styles.scss
application/common/: SocketsEvents.ts
application/common/enums/: ClientCommand.ts  LogType.ts  MissionType.ts  Operation.ts  RobotCommand.ts  RobotId.ts  RobotState.ts  SocketsEvents.ts  Topic.ts  TopicType.ts  command.enum.ts
application/common/interfaces/: BasicCommand.ts  EndMission.ts  FindFurthestRobot.ts  GeofenceBounds.ts  IdentifyRobot.ts  LiveMap.ts  LogMessage.ts  MessageOperation.ts  Mission.ts  MissionDetails.ts  MissionStatus.ts  NotifyRobotsToCommunicate.ts  P2PCommand.ts  Position.ts  Request.ts  ReturnToBase.ts  RobotPose.ts  RobotPoseWithDistance.ts  RobotStatus.ts  (+5 more)
application/server/: .env  .eslintrc.json  nest-cli.json  package-lock.json  package.json  tsconfig.json
client/: .gitignore  Dockerfile  compose.yaml  package-lock.json  package.json
client/src/: index.html  styles.scss
common/interfaces/: request.interface.ts
dockerfiles/: Dockerfile_client  Dockerfile_gazebo  Dockerfile_server  compose.yaml  get_ip.py  set_backend_ip.py
embedded_ws/: README.md  launch.sh  mapper_params_online_async.yaml
embedded_ws/examples_msgs/: mission_msg.txt
embedded_ws/robot_script/: build.sh  launch.sh  launch_local.sh  launch_negative_elevation.sh
embedded_ws/sounds/: ItsMeLimo.m4a
embedded_ws/src/com_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
embedded_ws/src/com_bridge/com_bridge/: com_serv.py  common_enums.py  common_methods.py  current_position  current_position.py  geofence.py  get_map_robot_2.py  identify.py  log.py  low_battery.py  map_saver.py  mission_server.py  mission_server_gazebo.py  mission_status_manager.py  mission_status_manager_gazebo.py  negative_elevation.py  peer_to_peer.py  publish_initialpose.py  return_base.py  robot_pose.py  sensor_logger.py  socket_manager.py  update_code.py  websocket_subscriber.py
embedded_ws/src/com_bridge/launch/: com_bridge_launch.py  com_bridge_launch_gazebo.py
embedded_ws/src/common_msgs/: CMakeLists.txt  package.xml
embedded_ws/src/common_msgs/action/: Mission.action
embedded_ws/src/common_msgs/msg/: GeofenceBounds.msg  IdentifyRobot  LogMessage.msg  MissionDetails.msg  MissionStatus.msg  P2P.msg  PathLength.msg  PoseWithDistance.msg  StartMission.msg  UpdateControllerCode.msg
gazebo/project_ws/: ManualLaunch.MD  aviary_compile_and_launch_gazebo.sh  compile_and_launch_gazebo.sh  map.sh  run.sh
launch/: .env  Dockerfile_client  Dockerfile_database  Dockerfile_gazebo  Dockerfile_server  compose.yaml  get_ip.py  start.sh
rapports-hebdomaires/: rapport-hebdomadaire-template  rapport-hebdomadaire-template.docx
server/: .env  package-lock.json  package.json  tsconfig.json
server/app/: app.module.ts
templates/: communications_templates.md
utilities/: delete_old_branch.sh
(+204 files in other folders)
